--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "keywords": [
     "bluebird",
@@ -18,10 +18,13 @@
   "author": "Streethub",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^2.4.1",
-    "bluebird": "^2.1.1",
+    "bluebird": "^2.1.1"
+  },
+  "devDependencies": {
     "sinon-chai": "^2.5.0",
     "chai": "^1.9.1",
-    "sinon": "^1.10.2"
+    "sinon": "^1.10.2",
+    "lodash": "^2.4.1",
+    "mocha": "^2.1.0"
   }
 }
